[package]
name = "futuristic-ui"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sauron = { path = "../../", default-features = false, features = ["with-dom", "with-request-animation-frame", "with-markdown"]}
log = "0.4"
console_log = { version = "0.2", features = ["color"], optional = true }
web-sys = { version = "0.3", features = ["HtmlAudioElement"] }
serde_json = { version = "1", features = ["preserve_order"] }
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }
# for using lighten, and darken when calculating theme colors
css-colors = "1"

[dev-dependencies]
#for parsing hex color into rgb, don't get mix with css-colors with a `s`
css-color = "0.1.1"
color_processing = "0.6.0"

[features]
with-measure = ["sauron/with-measure"]

[profile.release]
# https://doc.rust-lang.org/cargo/reference/profiles.html
# optimize for binary size
#opt-level = "s"
# optimize for binary size, but also turn off loop vectorization.
opt-level = "z"
lto = true
panic = "abort"
