[package]
name = "interactive-macro-prediff"
version = "0.1.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
sauron = { path = "../../", features = ["prediff"] }
log = "0.4"
console_log = "0.2"
