[package]
name = "js-framework-benchmark-sauron"
version = "0.1.0"
authors = ["Markus Kohlhase <mail@markus-kohlhase.de>", "Jovansonlee Cesar <ivanceras@gmail.com>" ]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2.7", features = ["js"] }
sauron = { path = "../../../sauron", default-features = false, features = ["with-node-macro", "with-dom","with-lookup", "with-debug", "with-measure", "use-template"] }
#sauron = { path = "../../../sauron", features = ["with-debug", "with-measure"] }
log = "0.4"
console_log = "0.2"
console_error_panic_hook = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
