
[package]
name = "minimal"
version = "0.1.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sauron = "0.6.0"
wasm-bindgen = "0.2.40"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.3", optional = true }


