[package]
name = "ssr-forms"
version = "0.1.0"
authors = ["Jovansonlee Cesar <ivanceras@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sauron = {path = "../../", default-features = false, features = ["with-node-macro"] }
warp = "0.3"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "1.9", features = ["full"] }
chrono = "0.4"
