
[package]
name = "todomvc-macro-syntax"
version = "0.1.0"
authors = [ "Jovansonlee Cesar <ivanceras@gmail.com>" ]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
sauron = { path = "../../", default-features = false, features = ["with-dom", "with-node-macro"] }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4.4", optional = true }
log = "0.4"
console_log = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3"
features = ["Storage"]


[features]
with-measure = ["sauron/with-measure"]
with-request-animation-frame = ["sauron/with-request-animation-frame"]
with-storage = [] # enable disable storage
